--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -719,7 +719,7 @@
 		}
 
 		&.major {
-			background: _palette(accent2);
+			// background: _palette(accent2);
 			border-radius: 100%;
 			cursor: default;
 			display: inline-block;
@@ -728,6 +728,10 @@
 			margin: 0 0 _size(element-margin) 0;
 			text-align: center;
 			width: 6em;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			margin: 0 auto;
 
 			&:before {
 				font-size: 2.25em;
@@ -1606,7 +1610,6 @@
 				width: 18em;
 
 				img {
-					border-radius: 100%;
 					display: block;
 					width: 100%;
 				}
@@ -2163,3 +2166,15 @@
 			}
 
 	}
+
+.dev-icons {
+	font-size: 4.5em;
+	// background-color: #272833;
+	// border-radius: 50%;
+	// background-size: 200px;
+}
+
+.icon.solid.alt.major.no-background {
+	background: none;
+	background-color: none;
+}
